# simo_merging

./: .gitignore  README.md  dino.ipynb  dino_hyperparam_search.ipynb  dino_hyperparam_search.py  main.py  mm_playground.ipynb  pyproject.toml  utils.py
config/: mtl.yaml.j2
config/model_merging/: mag_masking.yaml.j2  tall_mask.yaml.j2  zeroshot.yaml.j2
model_merging/: adamerging_utils.py  aggregator.py  eval_utils.py  tallmask_utils.py  task_vectors.py  ties_utils.py  utils.py
models/dinov2/: __init__.py  backbones.py  vision_transformer.py
models/dinov2/layers/: dpt.py  patch_embed.py
models/dinov2/losses/: L1.py  __init__.py  cross_entropy_loss.py  gradientloss.py  sigloss.py  utils.py
models/dinov2/mtl/: multitasker.py
models/dinov2/tasks/depth/: __init__.py  decode_heads.py  depther.py
models/dinov2/tasks/normal/: __init__.py  decode_heads.py  surface_normalizer.py
models/dinov2/tasks/seg/: __init__.py  decode_heads.py  segmentor.py
notebooks/: dino_eval_playground.ipynb  eval_playground.ipynb  simo_merging.ipynb  task_relationships.ipynb  traditional_model_merging.ipynb
training/: create_dataset.py  utils.py
