[project]
name = "simo-merging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pre-commit>=4.3.0",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.3",
]
